# BuildIt

./: Makefile
backend/: .gitignore  README.md  main.py  pyproject.toml  repository.py  schemas.py
backend/src/: dev_utils.py  helpers.py  main.py  repository.py  schemas.py
backend/tests/: repository_test.py
frontend/: package-lock.json  package.json
frontend/src/lib/: api.ts  stages.svelte.ts  status-bar.svelte.ts  status.ts  store.ts  types.ts  utils.ts
frontend/src/lib/components/: AddTask.svelte  AdminPanel.svelte  Column.svelte  Deadzone.svelte  Stage.svelte  Statusbar.svelte
frontend/src/lib/types/: board.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
