[project]
name = "backend"
version = "0.1.0"
description = "Backend for my BuildIt! frontend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pypika>=0.48.9",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "uvicorn>=0.35.0",
]

[tool.pyright]
include = ["."]
extraPaths = ["."]
