[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "Backend for my BuildIt! frontend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pypika>=0.48.9",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "pytest>=8.4.1",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
